# tiny-crc32c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
benchmarks/: CMakeLists.txt  benchmark.cpp
include/: tiny_crc32.hpp
tests/: crc32.cpp  doctest.h
